2009-03-27  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed "Bug 489000 -
	  Cursor blinks when another window has focus".

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed "Bug 487736 - Clipboard
	  ring and code snippets not shown anymore in the toolbox".

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/ClipboardActions.cs: Fixed "Bug 487422 -
	  Ctrl+C/V/X should copy/paste/cut the whole line if no
	  selection is made like in VS".

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Handled possible
	  exception.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs:
	* Mono.TextEditor.PopupWindow/ListWidget.cs:
	* Mono.TextEditor.PopupWindow/TooltipWindow.cs:
	* Mono.TextEditor.PopupWindow/IListDataProvider.cs: Cleaned up
	  some source.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: 

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs:
	* Mono.TextEditor.PopupWindow/ListWidget.cs:
	* Mono.TextEditor.PopupWindow/IListDataProvider.cs: Fixed
	  headers.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs:
	* Mono.TextEditor.PopupWindow/IListDataProvider.cs: Used
	  template data provider.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: 

	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor.PopupWindow/ListWindow.cs:
	* Mono.TextEditor.PopupWindow/IListDataProvider.cs: Changed
	  list provider interface.

2009-03-22  Mike Krüger  <mkrueger@novell.com>

	* Styles/BrownStyle.xml:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml: Updated template colors (but I'm
	  up for color suggestions).
