@@ -1,3 +1,8 @@
+2009-03-30  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 489850 - Implement
+	  mouse-cursor hide on typing'.
+
 2009-03-27  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/TextViewMargin.cs: fixed "Bug 489000 -
